chore: Update NL NS presets

--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
                 { id: 'custom', name: 'Custom', cost: '', discount: '' },
                 { id: 'nl-gvb-easy', name: 'Netherlands - GVB Easy Flex', cost: '1', discount: '10' },
                 { id: 'nl-gvb-flex', name: 'Netherlands - GVB Flex', cost: '5.5', discount: '20' },
-                { id: 'nl-gvb-extra', name: 'Netherlands - GVB Extra Flex', cost: '15', discount: '40' }
+                { id: 'nl-gvb-extra', name: 'Netherlands - GVB Extra Flex', cost: '15', discount: '40' },
+                { id: 'nl-gvb-vrij', name: 'Netherlands - GVB Vrij', cost: '82', discount: '100' },
+                { id: 'nl-ns-dal-voordeel', name: 'Netherlands - NS Dal Voordeel', cost: '5.95', discount: '40' },
+                { id: 'nl-ns-weekend-voordeel', name: 'Netherlands - NS Weekend Voordeel', cost: '2.30', discount: '40' },
+                { id: 'nl-ns-weekend-vrij', name: 'Netherlands - NS Weekend Vrij', cost: '36.95', discount: '100' },
+                { id: 'nl-ns-dal-vrij', name: 'Netherlands - NS Dal Vrij', cost: '119.95', discount: '100' },
+                { id: 'nl-ns-altijd-vrij', name: 'Netherlands - NS Altijd Vrij', cost: '375.70', discount: '100' },
             ];
 
             const handlePresetChange = (e) => {
